--- a/index.html
+++ b/index.html
@@ -13,45 +13,51 @@
     <title>Penguin Fashion Store</title>
   </head>
   <body class="font-['Roboto']">
+    <!-- Header -->
     <header class="bg-[#FFFBF0] pb-6 md:pb-36">
+      <!-- Navbar -->
       <nav>
         <div
-          class="md:px-32 md:py-8 pl-4 pt-6 flex items-center justify-between mb-8"
+          class="mb-8 flex items-center justify-between pl-4 pt-6 md:px-32 md:py-8"
         >
+          <!-- Logo -->
           <img
             class="w-4/6 md:w-4/12 lg:w-2/12"
             src="./icons/logo.png"
             alt=""
           />
+          <!-- Navigation Links -->
           <ul
-            class="hidden md:flex md:item-center md:justify-center md:gap-x-14"
+            class="md:item-center hidden md:flex md:justify-center md:gap-x-14"
           >
             <li>
-              <a class="text-[#3C3C3C] text-base font-medium" href="_blank"
+              <a class="text-base font-medium text-[#3C3C3C]" href="_blank"
                 >Home</a
               >
             </li>
             <li>
-              <a class="text-[#3C3C3C] text-base font-medium" href="_blank"
+              <a class="text-base font-medium text-[#3C3C3C]" href="_blank"
                 >Product</a
               >
             </li>
             <li>
-              <a class="text-[#3C3C3C] text-base font-medium" href="_blank"
+              <a class="text-base font-medium text-[#3C3C3C]" href="_blank"
                 >About Us</a
               >
             </li>
             <li>
-              <a class="text-[#3C3C3C] text-base font-medium" href="_blank"
+              <a class="text-base font-medium text-[#3C3C3C]" href="_blank"
                 >Contact U</a
               >
             </li>
           </ul>
         </div>
       </nav>
-      <div class="md:flex md:justify-between md:items-center md:px-32">
-        <div class="px-4 mt-14">
-          <h1 class="text-6xl uppercase font-extrabold text-[363958]">
+      <!-- Hero Section -->
+      <div class="md:flex md:items-center md:justify-between md:px-32">
+        <!-- Hero Text -->
+        <div class="mt-14 px-4">
+          <h1 class="text-6xl font-extrabold uppercase text-[363958]">
             <span class="text-[#FABE4C]">Be the Penguins</span><br />of Winter
           </h1>
           <p class="mt-4">
@@ -59,7 +65,7 @@
             industry.
           </p>
           <button
-            class="mt-4 px-8 py-3 text-white rounded-2xl bg-gradient-to-r from-lime-600 to-[#A4BC46] hover:from-blue-600 hover:to-blue-800 inline-flex items-center"
+            class="mt-4 inline-flex items-center rounded-2xl bg-gradient-to-r from-lime-600 to-[#A4BC46] px-8 py-3 text-white hover:from-blue-600 hover:to-blue-800"
           >
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -67,7 +73,7 @@
               viewBox="0 0 24 24"
               stroke-width="1.5"
               stroke="currentColor"
-              class="w-6 h-6 mr-3"
+              class="mr-3 h-6 w-6"
             >
               <path
                 stroke-linecap="round"
@@ -79,17 +85,299 @@
             <span>BUY NOW</span>
           </button>
         </div>
-        <div class="mt-12 md:mt-0 inline-flex items-center justify-center">
+        <!-- Hero Image -->
+        <div class="mt-12 inline-flex items-center justify-center md:mt-0">
           <img class="w-4/6 md:w-auto" src="./images/model.png" alt="" />
         </div>
       </div>
     </header>
+    <!-- Women Jacket Section -->
     <div class="my-12 md:px-32">
-      <h1 class="my-12 text-4xl font-extrabold uppercase">W0Man Jacket</h1>
-      <div>
-        <div class="w-3/4 h-3/4 md:w-1/4 drop-shadow-xl">
-          <div class="bg-[#F1F1F1]">
-            <img src="./images/jacket-1.png" alt="" />
+      <!-- Women Jacket Text -->
+      <h1
+        class="my-12 text-center text-4xl font-extrabold uppercase md:text-left"
+      >
+        Woman Jacket
+      </h1>
+      <!-- Cards Section -->
+      <div
+        class="flex p-8 md:p-16 spca-y-6 md:space-x-6 flex-col items-center justify-center md:flex-row"
+      >
+        <!-- Card - 1 -->
+        <div>
+          <div
+            class="m-auto flex-row items-center justify-center rounded-3xl p-4 shadow-xl"
+          >
+            <div class="h-3/6 rounded-3xl bg-[#F1F1F1]">
+              <img
+                class="m-auto w-5/6 p-4"
+                src="./images/jacket-1.png"
+                alt=""
+              />
+            </div>
+            <h1 class="text=[#363958] pt-4 text-3xl font-bold">
+              Yellow Coat Jacket
+            </h1>
+            <p class="pt-2">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <div class="md: my-6 flex items-center justify-between">
+              <h1 class="text-4xl font-black text-yellow-500">$234</h1>
+              <button
+                class="inline-flex items-center rounded-2xl bg-gradient-to-r from-lime-600 to-[#A4BC46] px-8 py-3 text-white hover:from-blue-600 hover:to-blue-800"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="mr-3 h-6 w-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                  />
+                </svg>
+
+                <span>BUY NOW</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- Card - 2 -->
+        <div>
+          <div
+            class="m-auto flex-row items-center justify-center rounded-3xl p-4 shadow-xl"
+          >
+            <div class="h-3/6 rounded-3xl bg-[#F1F1F1]">
+              <img
+                class="m-auto w-5/6 p-4"
+                src="./images/jacket-2.png"
+                alt=""
+              />
+            </div>
+            <h1 class="text=[#363958] pt-4 text-3xl font-bold">
+              Yellow Coat Jacket
+            </h1>
+            <p class="pt-2">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <div class="md: my-6 flex items-center justify-between">
+              <h1 class="text-4xl font-black text-yellow-500">$234</h1>
+              <button
+                class="inline-flex items-center rounded-2xl bg-gradient-to-r from-lime-600 to-[#A4BC46] px-8 py-3 text-white hover:from-blue-600 hover:to-blue-800"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="mr-3 h-6 w-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                  />
+                </svg>
+
+                <span>BUY NOW</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- Card - 3 -->
+        <div>
+          <div
+            class="m-auto flex-row items-center justify-center rounded-3xl p-4 shadow-xl"
+          >
+            <div class="h-3/6 rounded-3xl bg-[#F1F1F1]">
+              <img
+                class="m-auto w-5/6 p-4"
+                src="./images/jacket-3.png"
+                alt=""
+              />
+            </div>
+            <h1 class="text=[#363958] pt-4 text-3xl font-bold">
+              Yellow Coat Jacket
+            </h1>
+            <p class="pt-2">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <div class="md: my-6 flex items-center justify-between">
+              <h1 class="text-4xl font-black text-yellow-500">$234</h1>
+              <button
+                class="inline-flex items-center rounded-2xl bg-gradient-to-r from-lime-600 to-[#A4BC46] px-8 py-3 text-white hover:from-blue-600 hover:to-blue-800"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="mr-3 h-6 w-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                  />
+                </svg>
+
+                <span>BUY NOW</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="my-12 md:px-32">
+      <!-- Women Jacket Text -->
+      <h1
+        class="my-12 text-center text-4xl font-extrabold uppercase md:text-left"
+      >
+        Woman Jacket
+      </h1>
+      <!-- Cards Section -->
+      <div
+        class="flex p-8 md:p-16 spca-y-6 md:space-x-6 flex-col items-center justify-center md:flex-row"
+      >
+        <!-- Card - 1 -->
+        <div>
+          <div
+            class="m-auto flex-row items-center justify-center rounded-3xl p-4 shadow-xl"
+          >
+            <div class="h-3/6 rounded-3xl bg-[#F1F1F1]">
+              <img
+                class="m-auto w-5/6 p-4"
+                src="./images/jacket-1.png"
+                alt=""
+              />
+            </div>
+            <h1 class="text=[#363958] pt-4 text-3xl font-bold">
+              Yellow Coat Jacket
+            </h1>
+            <p class="pt-2">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <div class="md: my-6 flex items-center justify-between">
+              <h1 class="text-4xl font-black text-yellow-500">$234</h1>
+              <button
+                class="inline-flex items-center rounded-2xl bg-gradient-to-r from-lime-600 to-[#A4BC46] px-8 py-3 text-white hover:from-blue-600 hover:to-blue-800"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="mr-3 h-6 w-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                  />
+                </svg>
+
+                <span>BUY NOW</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- Card - 2 -->
+        <div>
+          <div
+            class="m-auto flex-row items-center justify-center rounded-3xl p-4 shadow-xl"
+          >
+            <div class="h-3/6 rounded-3xl bg-[#F1F1F1]">
+              <img
+                class="m-auto w-5/6 p-4"
+                src="./images/jacket-2.png"
+                alt=""
+              />
+            </div>
+            <h1 class="text=[#363958] pt-4 text-3xl font-bold">
+              Yellow Coat Jacket
+            </h1>
+            <p class="pt-2">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <div class="md: my-6 flex items-center justify-between">
+              <h1 class="text-4xl font-black text-yellow-500">$234</h1>
+              <button
+                class="inline-flex items-center rounded-2xl bg-gradient-to-r from-lime-600 to-[#A4BC46] px-8 py-3 text-white hover:from-blue-600 hover:to-blue-800"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="mr-3 h-6 w-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                  />
+                </svg>
+
+                <span>BUY NOW</span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <!-- Card - 3 -->
+        <div>
+          <div
+            class="m-auto flex-row items-center justify-center rounded-3xl p-4 shadow-xl"
+          >
+            <div class="h-3/6 rounded-3xl bg-[#F1F1F1]">
+              <img
+                class="m-auto w-5/6 p-4"
+                src="./images/jacket-3.png"
+                alt=""
+              />
+            </div>
+            <h1 class="text=[#363958] pt-4 text-3xl font-bold">
+              Yellow Coat Jacket
+            </h1>
+            <p class="pt-2">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry.
+            </p>
+            <div class="md: my-6 flex items-center justify-between">
+              <h1 class="text-4xl font-black text-yellow-500">$234</h1>
+              <button
+                class="inline-flex items-center rounded-2xl bg-gradient-to-r from-lime-600 to-[#A4BC46] px-8 py-3 text-white hover:from-blue-600 hover:to-blue-800"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke-width="1.5"
+                  stroke="currentColor"
+                  class="mr-3 h-6 w-6"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z"
+                  />
+                </svg>
+
+                <span>BUY NOW</span>
+              </button>
+            </div>
           </div>
         </div>
       </div>
